src/test/deca/context/invalid/provided/testi05.deca
//Resultats :
//Erreur contextuelle
//Ligne 8 : A field is already defined by hmida
class A{
    int hmida;
}
class B extends A{
    int hmida(){}
}